--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@
 
 .body {
   background: #f9f9f9;
-  height: calc(100vh - 70px);
+  height: calc(100vh - 80px);
   width: calc(100% - 60px);
   position: absolute;
   right: 0;
@@ -142,7 +142,8 @@
 .body .titulo {
   width: 1100px;
   max-width: 95%;
-  margin: 2rem auto;
+  margin: 4rem auto;
+  margin-bottom: 2rem;
 }
 .body .tabla-opciones {
   width: 1100px;
